AMBARI-24692. Use jdk8 as default compiler version (#7)
* AMBARI-24692. Use jdk8 as default compiler version

* AMBARI-24692. Revert jvm gc settings

* AMBARI-24692. Implement TODO: java version check.

* AMBARI-24692. Extend jdk version to env variable in Makefile